--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <p id="biglietto"></p>
-    <script src="myjs.js"></script>
+    <script src="myScript.js"></script>
 </body>
 </html>
+
+
+<!-- chiede numero di chilometri che vuole percorrere e l'età 
+
+prezzo biglietto 0.21 € al km
+
+sconto del 20% per i minorenni
+sconto del 40% per gli over 65
+prezzo finale con centesimi -->
+
